Add idea.project.settings.compiler.javac options
(cherry picked from commit 648cac2694b0561004be486d755067e0de720408)